--- a/frontend/login.html
+++ b/frontend/login.html
@@ -28,7 +28,7 @@
         Login
       </button>
       <div style="margin-top: 20px">
-        <a href="D:\full stack expense tracker app\frontend\signup.html">New User?Signup</a>
+        <a href="./signup.html">New User?Signup</a>
       </div>
     </form>
   </div>
