--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -19,7 +19,7 @@
       </div>
       <div style="margin-top: 20px">
         <label style="margin-right: 20px">Enter Email</label>
-        <input type="email" name="email" id="email"  />
+        <input type="email" name="email" id="email" required/>
       </div>
       <div style="margin-top: 20px">
         <label style="margin-right: 10px">Enter Password</label>
