--- a/frontend/login.html
+++ b/frontend/login.html
@@ -32,4 +32,7 @@
       </div>
     </form>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
+  <script src="./login.js">
+  </script>
 </body>
