--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -16,7 +16,7 @@
   </div>
   <h2>Expenses</h2>
   <ul id="listOfExpenses"></ul>
-  <h2 id="leaderBoardDetails"></h2>
+  <div id="leaderBoardDetails"></div>
   <ul id="leaderBoard"></ul>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
   <script src="./expenses.js"></script>
