past files downloaded added

--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -18,6 +18,8 @@
   <ul id="listOfExpenses"></ul>
   <div id="leaderBoardDetails"></div>
   <ul id="leaderBoard"></ul>
+  <div id="pastdownloadedurls"></div>
+  <ul id="downloadedurls"></ul>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
   <script src="./expenses.js"></script>
 </body>
