--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -16,6 +16,7 @@
   </div>
   <h2>Expenses</h2>
   <ul id="listOfExpenses"></ul>
+  <div id="expensesPagination" style="text-align: center;"></div>
   <div id="leaderBoardDetails"></div>
   <ul id="leaderBoard"></ul>
   <div id="pastdownloadedurls"></div>
